style.css
@font-face {
    font-family: Helvetica-Neue;
    src: url("assets/HelveticaNeueRegular.otf");
}
@font-face {
    font-family: Formula1-Bold;
    font-weight: bold;
    src: url("assets/Formula1-Bold.otf") format("opentype");
}
@keyframes RightToLeft { /*animation function for the sliding text*/
    from {
        transform: translateX(-33.7%);
    }
    to {
        transform: translateX(-67.435%);/*This weird number is where the cycle restarts
        and is linked to the length of the text in index.html */
    }
}

/*general styles*/
body {
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
  background-color: #CA3F3A;
  overflow-x: hidden;
}
a {
    text-decoration: none;
    font-size: 1.3rem;
}
.home-image {
    background: url('assets/HomeImage.jpg');
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background-size: cover;
    background-position-x: 50%;
    z-index: -1;
}

/*1st page styling for header*/
header { 
    position: fixed;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: 10vh;
    z-index: 2;
}
.logo1 {
    background: url('assets/logo.jpg');
    border-radius: 15px;
    width: 2.7em;
    height: 2.7em;
    margin: 0.5em;
    background-position-x: 30%;
    background-size: cover;
}
svg.menu {
    width: 2.7em;
    margin-right: 1.5em;

    cursor: pointer;
}
nav {
    position: fixed;
    right: 0;
    top: 0;
    background-color: white;
    width: 50%;
    height: 100vh;
    text-transform: uppercase;

    transform: translateX(100%);
    transition: transform .5s ease-in-out;
}
ul {
    list-style-type: none;
    padding: 0;
    margin-top: 8em;
    height: fit-content;
}
.burger-items {
    color: black;
    padding: .75em 2em;
    display: block;

    &:hover{
        background: rgb(207, 206, 206);
    }
}
.close{
    float: right;
    margin: 2em;
    width: 2em;
    cursor: pointer;
}
/*.open-nav is created by some javascript when burger and close icon is clicked*/
.open-nav {
    transform: translateX(0%);
}

/*1st page styling, everything but the header*/
section.home-page {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    color: orange;
    height: 100vh;
}
.scrolling-text{
    font-size: 4rem;
    font-family: Formula1-Bold;
    color: white;
    position: absolute;
    top: 16rem;
    white-space: nowrap;

    animation: RightToLeft 8s linear infinite;
}
.arrow.one {
    position: absolute;
    width: 100%;
    bottom: 2em;
    align-self: center;
    cursor: pointer;
}

span {
    color: #CA3F3A;
}

/*2nd page styling (introduction)*/
section.intro {
    display: flex;
    justify-content: space-between;
    height: 100vh;
    flex-direction: column;
    overflow-x: hidden;
}
.logo2 {
    background: url('assets/logo.jpg');
    width: 60vh;
    max-width: 500px;
    height: 60vh;
    max-height: 500px;
    margin-top: -5em;
    background-position-x: 50%;
    background-position-y: 50%;
    background-size: cover;
    z-index: -2;
    align-self: center;
}

h1.intro-concordia {
    margin-top: -8rem;
    margin-left: 3rem;
    align-self: center;
    color: white;
    font-family: Formula1-Bold;
    font-size: 3.5rem;
    
}
p.subhead {
    color: white;
    margin-top: -3rem;
    margin-right: 3rem;
    margin-left: 3rem;
    font-size: 1rem;
    line-height: 1.6rem;
    text-align: justify;
}
.arrow.two {
    align-self: center;
    margin-bottom: 2em;
    cursor: pointer;
}

/*PAGE 3 - SUBSYSTEMS*/
section.subsystems {
    display: flex;
    height: fit-content;
    overflow-x: auto;
}
.card {
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    margin-left: 0.75rem;
    margin-right: 0.75rem;
    border-radius: 25px;
    background: #FFAE03;
    padding: 1.38rem;
    width: 17.5625rem;
    height: 29.1875rem;
    flex-shrink: 0;
}

.title {
    color: white;
    position: relative;
    font-family: Formula1-Bold;
    font-size: 29px;
    margin-top: 0em;
}
.frame {
    display: flex;
    height: 100%;
    flex-direction: column;
    justify-content: space-around;
}
.card-photo {
    background-size: contain;
    height: 11rem;
    width: auto;
    border-radius: 25px;
    margin-top: -1em;
}
.text {
    color: white;
    text-align: left;
    font-size: 1.31rem;
    margin-top: -1em;
    height: fit-content;
}

/*page 3 - contact area*/

section.contact {
    display: flex;
    flex-direction: column;
    height: fit-content;
    align-items: center;

    margin-top: 5rem;
    margin-bottom: 2em;
}
.title.contact {
    font-size: 4rem;
}
form {
    display: flex;
    flex-direction: column;
    align-items: center;
    
}
.c {
    margin-top: 1.3em;
    width: 33em;
}
.email {
    background-color: rgb(231, 126, 126);
    height: 2em;
    outline: none;
}
.names {
    display: flex;
    justify-content: space-between;
    width: 28em;
    height: 2em;
}
.user-name {
    width: 15em;
}
.talk {
    background-color: rgb(231, 126, 126);
    margin-bottom: 1.5em;
}
.submit {
    width: 33em;
    height: 2em;
    background-color: rgb(231, 126, 126);
}

/*FOOTER PAGE 3*/
section.footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    
    width: 100%;
    height: fit-content;
    justify-content: space-between;
    border-top: 1.5px solid white;
    
}
.socials {
    margin-top: .8rem;
    display: flex;
    
    justify-content: space-between;
    width: 100%;
}
.link {
    color: white;
    font-size: 1em;
}
.credentials {
    font-size: .8em;
    opacity: 0.4;
}



@media only screen and (max-width: 450px) {
    .intro-imageAndtext {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    h1.intro-concordia {
        font-size: 2.6em;
        margin-left: unset;
        
    }
    p.subhead {
        margin-left: 1.5rem;
        margin-right: 1.5em;
    }

    .c {
        width: 25em;
    }
    .names {
        width: 21.3em;
    }
    .user-name {
        width: 11em
    }
}
/*for the burger menu*/
@media only screen and (min-width: 680px) {
    .menu {
        display: none;
    }

    nav {
        transform: translateX(0);
        position: unset;
        height: auto;
        width: auto;
        display: block;
        background: none;
    }
    .close {
        display: none;
    }
    ul {
        display: flex;
        margin: 0;
    }
    .burger-items {
        padding: .5em 1.5em;
        font-size: .9rem;
        color: #CA3F3A;

        &:hover {
            background: unset;
            text-decoration: underline;
        }
    }

    

    .intro {
        justify-content: unset;
    }
    p.subhead {
        font-size: 1.25rem;
    }
}


/*formating for the pages for desktop*/
@media only screen and (min-width: 900px) {
    section.intro {
        flex-direction: row;
        align-items: center;
    }
    .logo2 {
        margin-right: 3em;
    }
    p.subhead {
        font-size: 1.25rem;
    }
}

/**/
@media only screen and (min-width: 1200px) {
    .wrapper {
        width: 1200px;
        margin: 0 auto;
    }

    header {
        width: 1200px;
    }
}

